<resources>
    <string name="app_name">VKCupTaskE</string>
    <string name="share_photos">Делитесь фотографиями</string>
    <string name="share_photos_extra_info">Поделитесь фотографией на стене, \n и добавьте к ней описание.</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="bottom_sheet_behaviour"></string>
    <string name="share_on_wall">Поделиться на стене</string>
    <string name="comment_hint">Добавить комментарий</string>
    <string name="send">Отправить</string>
    <integer name="com_vk_sdk_AppId">7328136</integer>
</resources>
