<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_container"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/share_on_wall_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/share_on_wall"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        ></TextView>

    <ImageButton
        android:id="@+id/dismiss_image_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ic_dismiss_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageButton>

    <EditText
        android:id="@+id/comment_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_edit_text_body"
        android:hint="@string/comment_hint"
        android:paddingLeft="12dp"
        android:textColorHint="@color/colorHintComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share_on_wall_text_view"
        ></EditText>
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image_view"
        android:layout_width="328dp"
        android:layout_height="218dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment_edit_text"
        android:layout_marginTop="12dp"
        app:riv_corner_radius="10dp">
    </com.makeramen.roundedimageview.RoundedImageView>
    <ImageButton
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_send_button"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    </ImageButton>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="@id/send_button"
        app:layout_constraintStart_toStartOf="@id/send_button"
        app:layout_constraintTop_toTopOf="@id/send_button"
        app:layout_constraintBottom_toBottomOf="@id/send_button">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>