<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/share_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_outline"
            app:layout_constraintBottom_toTopOf="@+id/share_photos_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.935"></ImageView>

        <TextView
            android:id="@+id/share_photos_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_photos"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toTopOf="@+id/share_photos_extra_info_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9748"></TextView>

        <TextView
            android:id="@+id/share_photos_extra_info_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_photos_extra_info"
            android:textSize="16sp"
            android:gravity="center"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5277"/>

        <ImageButton
            android:id="@+id/choose_photo_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_choose_photo_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_photos_extra_info_text_view"
            app:layout_constraintVertical_bias="0.0164"></ImageButton>
        <TextView
            android:id="@+id/choose_photo_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_photo"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/choose_photo_image_button"
            app:layout_constraintEnd_toEndOf="@id/choose_photo_image_button"
            app:layout_constraintStart_toStartOf="@id/choose_photo_image_button"
            app:layout_constraintTop_toTopOf="@id/choose_photo_image_button"
            app:layout_constraintVertical_bias="0.5"></TextView>

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_photo_text_view"></ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>